# lens

./: README.md  githfield.yml  pyproject.toml
.github/workflows/: ci.yml
examples/: feed_analyst_digests.py
src/finlens/: __init__.py  adapter.py  company.py  digest.py  lenses.py  sectors.py
tests/: test_adapter.py  test_company.py  test_digest.py  test_factor.py  test_lenses.py  test_sectors.py
